--- a/1.Descripción_de_Variables/2.VariableAnalysis_CentralFrio.ipynb
+++ b/1.Descripción_de_Variables/2.VariableAnalysis_CentralFrio.ipynb
@@ -76,7 +76,7 @@
    "source": [
     "# TODO(developer): Set key_path to the path to the service account key\n",
     "#                  file.\n",
-    "key_path = \"Credentials/mdona-cloud-labpri-ctrlsenales-8449b1ab35ba.json\"\n",
+    "key_path = \"Credentials.json\"\n",
     "\n",
     "credentials = service_account.Credentials.from_service_account_file(\n",
     "    key_path, scopes=[\"https://www.googleapis.com/auth/cloud-platform\"],\n",
